--- a/example/asset/index.html
+++ b/example/asset/index.html
@@ -18,7 +18,7 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="/socket.io-1.3.7.js"></script>
+    <script src="/socket.io-1.7.2.js"></script>
     <script src="/jquery-1.11.1.js"></script>
     <script>
       var socket = io();
@@ -33,6 +33,11 @@
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
+
+      $(document).ready(function () {
+        $('#m').focus()
+      })
+      
     </script>
   </body>
 </html>
